# Copyright (c) 2017 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/buildflag_header.gni")
import("//build/util/branding.gni")
import("//extensions/buildflags/buildflags.gni")
import("//mojo/public/tools/bindings/mojom.gni")

brave_common_visibility_targets = [
  ":*",
  "//brave:browser_dependencies",
  "//brave:child_dependencies",
  "//brave/browser/*",
  "//brave/ios/browser/*",
  "//brave/renderer/*",
  "//brave/test/*",
  "//brave/utility/*",
  "//chrome/common/*",
  "//chrome/browser/*",
  "//chrome/renderer/*",
  "//chrome/utility/*",
]

source_set("channel_info") {
  visibility = brave_common_visibility_targets

  if (is_linux) {
    sources = [
      "brave_channel_info_posix.cc",
      "brave_channel_info_posix.h",
    ]

    deps = [
      "//base:base",
      "//base:logging_buildflags",
      "//components/version_info:version_info",
    ]

    configs += [ "//brave/build/linux:linux_channel_names" ]
  }
}

source_set("common") {
  visibility = brave_common_visibility_targets +
               # These are layering violation and need to be fixed
               [ "//brave/components/brave_ads/browser" ]
  if (!is_android && !is_ios) {
    visibility += [ "//brave/components/ipfs/test:brave_ipfs_browser_tests" ]
  }

  deps = []

  sources = [
    "brave_channel_info.cc",
    "brave_channel_info.h",
    "resource_bundle_helper.cc",
    "resource_bundle_helper.h",
  ]

  public_deps = [ "//brave/components/constants" ]

  if (!is_android && !is_ios) {
    deps += [ "//brave/common/importer" ]
  }

  if (enable_extensions) {
    sources += [
      "extensions/brave_extensions_api_provider.cc",
      "extensions/brave_extensions_api_provider.h",
      "extensions/brave_extensions_client.cc",
      "extensions/brave_extensions_client.h",
    ]

    deps += [
      "//brave/components/brave_component_updater/browser",
      "//brave/components/https_upgrade_exceptions/browser",
      "//extensions/common:common_constants",
    ]

    public_deps += [ "extensions/api" ]
  }

  deps += [
    ":mojo_bindings",
    "//base",
    "//brave/chromium_src:common",
    "//brave/extensions:common",
    "//components/version_info:channel",
    "//extensions/buildflags",
    "//services/service_manager",
    "//ui/base",
  ]

  if (!is_ios) {
    sources += [
      "brave_content_client.cc",
      "brave_content_client.h",
    ]

    deps += [
      "//brave/components/resources",
      "//brave/components/resources:static_resources_grit",
      "//chrome/common",
      "//chrome/common:channel_info",
      "//chrome/common:constants",
      "//components/resources",
      "//content/public/common",
      "//third_party/widevine/cdm:buildflags",
    ]
  }
}

config("constants_configs") {
  visibility = brave_common_visibility_targets +
               # These are layering violation and need to be fixed
               [ "//chrome/tools/build/mac:infoplist_strings_util" ]
  defines = []
  if (is_mac) {
    defines += [ "BRAVE_PRODUCT_STRING=\"$chrome_product_full_name\"" ]
  }
}

mojom("mojo_bindings") {
  sources = [ "brave_renderer_configuration.mojom" ]

  deps = [ "//mojo/public/mojom/base" ]
}
