# Copyright (c) 2017 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/buildflag_header.gni")
import("//build/util/branding.gni")
import("//extensions/buildflags/buildflags.gni")
import("//mojo/public/tools/bindings/mojom.gni")

brave_common_visibility_targets = [
  ":*",
  "//brave:browser_dependencies",
  "//brave:child_dependencies",
  "//brave/browser/*",
  "//brave/ios/browser/*",
  "//brave/renderer/*",
  "//brave/test/*",
  "//brave/utility/*",
  "//chrome/common/*",
  "//chrome/browser/*",
  "//chrome/renderer/*",
  "//chrome/utility/*",
]

source_set("channel_info") {
  visibility = brave_common_visibility_targets

  if (is_linux) {
    sources = [
      "brave_channel_info_posix.cc",
      "brave_channel_info_posix.h",
    ]

    deps = [
      "//base:base",
      "//components/version_info:version_info",
    ]

    configs += [ "//brave/build/linux:linux_channel_names" ]
  }
}

group("common") {
  public_deps = [ "//chrome/common" ]
}

config("constants_configs") {
  visibility = brave_common_visibility_targets +
               # These are layering violation and need to be fixed
               [ "//chrome/tools/build/mac:infoplist_strings_util" ]
  defines = []
  if (is_mac) {
    defines += [ "BRAVE_PRODUCT_STRING=\"$chrome_product_full_name\"" ]
  }
}

mojom("mojo_bindings") {
  sources = [ "brave_renderer_configuration.mojom" ]

  deps = [ "//mojo/public/mojom/base" ]
}
