# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

brave_common_sources = []

if (is_android) {
  brave_common_sources = [
    "//chrome/common/importer/imported_bookmark_entry.cc",
    "//chrome/common/importer/imported_bookmark_entry.h",
  ]
}
