# Copyright (c) 2025 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/ui.gni")
import("//testing/test.gni")

test("brave_components_unittests") {
  use_xvfb = use_xvfb_in_this_config

  deps = [
    "//base",
    "//brave/components/ai_chat/content/browser:unit_tests",
    "//components/test:run_all_unittests",
  ]
  if (is_ios) {
    bundle_deps = [ "//components:components_tests_pak_bundle_data" ]
  } else {
    data_deps = [
      "//components:components_tests_pak",
      "//third_party/angle:includes",
      "//ui/resources:ui_test_pak_data",
    ]
  }

  if (is_android) {
    deps += [
      "//base:base_unittest_support_java",
      "//gin:v8_snapshot_assets",
      "//ui/android:ui_java",
      "//ui/base",
      "//ui/gfx",
    ]
  }
}
